Revert "fixed white space in the blog, aligned qoute in the center and made the body use roboto in every page"
This reverts commit 86b8332732447f34366a2ae6b672a60b9017c23c.

--- a/index.css
+++ b/index.css
@@ -1,16 +1,11 @@
 /*--Global--*/
-@import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
     font-family: Roboto;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
-  font-family: "Roboto", sans-serif !important;
-  font-weight: 400 !important;
-  font-style: normal !important;
-}
+
 /*--nav--*/
 
 header {
@@ -346,15 +341,12 @@ header {
   width: 100px !important;
   font-size: 16px;
 }
-.qoute{
+.quote{
   margin-top: 20px;
   background:#909091;
   font-size: 20px;
   padding: 10px;
   text-align: center;
-}
-.featured-section {
-  margin-top: 0px !important;
 }
 .sign-up{
   flex-direction: column;
@@ -962,6 +954,10 @@ align-items: center;
     display:block;
     margin-left: 20px;
 }
+    /*blog*/
+    .featured-section {
+      margin-top: 70px;
+    }
     /*contact*/
 .center img{
     display:none;
